--- a/README.mkd
+++ b/README.mkd
@@ -37,11 +37,16 @@ something that just uses bash is very useful.
     # you can only run one simple command; if you have a command with shell
     # meta characters (;, &, &&, ||, >, <, etc), do this:
     bq bash -c 'echo hello; echo there >junk.$RANDOM'
-## installation
-`sudo apt install inotify-tools`
-### quicker
-`yarn global add ssh://git@github.com/oliverhuynh/bq.git --prefix /usr/local/bin --force`
-### custom
+## installation  
+
+Prepare:   
+`sudo apt install inotify-tools`   
+
+### quicker method  
+`yarn global add ssh://git@github.com/oliverhuynh/bq.git --prefix /usr/local --force`
+
+
+### manual install  
 `wget https://raw.githubusercontent.com/oliverhuynh/bq/master/bq -O /usr/local/bin/bq && chmod +x /usr/local/bin/bq`
 
 ## workers
